[project]
name = "hermetica"
version = "0.1.0"
description = "Protocol Version Control and Composition with Hermetica"
requires-python = ">=3.13"

dependencies = [
    # Utilities
    "requests",
    "python-dateutil",
    "dotenv"
]

[project.optional-dependencies]
dev = [
    "gibberish-detector",
    "ruff",
    "detect-secrets",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "responses"
]

[build-system]
requires = ["setuptools>=65", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "hermetica"}

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]