[project]
name = "hermetica"
version = "0.1.0"
description = "Protocol Version Control and Composition with Hermetica"
requires-python = ">=3.13"

dependencies = [
    # HTTP client for the protocols.io API pull
    "requests",
    # Loads config/secrets from env/.env
    "python-dotenv",
]

[project.optional-dependencies]
# ALL Python tooling lives here — including Python-based CLIs like pre-commit.
# Only non-Python system tools (git, uv) belong in flake.nix; putting a Python
# app in Nix leaks its closure onto PYTHONPATH and shadows this venv.
dev = [
    "ruff",
    "detect-secrets",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "responses",
]

[build-system]
requires = ["setuptools>=65", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "hermetica"}

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]